--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <md-list>
             <md-subheader class="md-no-sticky">Friends</md-subheader>
             <md-list-item class="md-3-line" ng-repeat="item in friends">
-              <img ng-src="{{item.face}}?{{$index}}" class="md-avatar" alt="{{item.who}}" />
+              <md-icon md-svg-icon="avatar:svg-{{ person.userRequested.name.charCodeAt(0) % 11 + 1}}" class="md-avatar"></md-icon>
               <div class="md-list-item-text">
                 <h3>{{ item.who }}</h3>
                 <h4>{{ item.what }}</h4>
@@ -54,7 +54,7 @@
             <md-divider ></md-divider>
             <md-subheader class="md-no-sticky">Requests received</md-subheader>
             <md-list-item class="md-3-line" ng-repeat="person in received">
-              <md-icon md-svg-icon="avatar:svg-{{ person.userRequester.name.charCodeAt(0) % 12}}" class="md-avatar"></md-icon>
+              <md-icon md-svg-icon="avatar:svg-{{ person.userRequester.name.charCodeAt(0) % 11 + 1}}" class="md-avatar"></md-icon>
               <div class="md-list-item-text">
                 <h3>{{ person.userRequester.name }}</h3>
                 <p>{{ person.userRequester.email }}</p>
@@ -72,7 +72,7 @@
             <md-divider ></md-divider>
             <md-subheader class="md-no-sticky">Requests sent</md-subheader>
             <md-list-item class="md-3-line" ng-repeat="person in sent">
-              <md-icon md-svg-icon="avatar:svg-{{ person.userRequested.name.charCodeAt(0) % 12}}" class="md-avatar"></md-icon>
+              <md-icon md-svg-icon="avatar:svg-{{ person.userRequested.name.charCodeAt(0) % 11 + 1}}" class="md-avatar"></md-icon>
               <div class="md-list-item-text">
                 <h3>{{ person.userRequested.name }}</h3>
                 <p>{{ person.userRequested.email }}</p>
